# SAM_Annotate

./: .gitignore  01.json  pyproject.toml  test.ipynb
ISAT/: software.yaml
example/convert/: coco可视化.ipynb
input/: 000.json  013.json  02.json  03.json
output/: 000.json  01.json  013.json  02.json  03.json  isat.yaml
voc_auto/: 000.xml  01.xml  013.xml  02.xml  03.xml
