[tool.poetry]
name = "segment-anything"
version = "0.1.0"
description = ""
authors = ["Hank <ha28763024@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
torch = { url = "https://download.pytorch.org/whl/cu118/torch-2.1.2%2Bcu118-cp310-cp310-win_amd64.whl" }
torchaudio = { url = "https://download.pytorch.org/whl/cu118/torchaudio-2.1.2%2Bcu118-cp310-cp310-win_amd64.whl" }
torchvision = { url = "https://download.pytorch.org/whl/cu118/torchvision-0.16.2%2Bcu118-cp310-cp310-win_amd64.whl" }
ipykernel = "^6.29.4"
opencv-python = "^4.10.0.84"
pycocotools = "^2.0.8"
matplotlib = "^3.9.0"
onnxruntime = "^1.18.0"
onnx = "^1.16.1"
numpy = "<2"
pyqt6 = "^6.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
