[tool.poetry]
name = "segment-anything"
version = "0.1.0"
description = ""
authors = ["Hank <ha28763024@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
torch = { url = "https://download.pytorch.org/whl/cu118/torch-2.1.2%2Bcu118-cp310-cp310-win_amd64.whl" }
torchaudio = { url = "https://download.pytorch.org/whl/cu118/torchaudio-2.1.2%2Bcu118-cp310-cp310-win_amd64.whl" }
torchvision = { url = "https://download.pytorch.org/whl/cu118/torchvision-0.16.2%2Bcu118-cp310-cp310-win_amd64.whl" }
ipykernel = "^6.29.4"
pycocotools = "^2.0.8"
matplotlib = "^3.9.0"
onnxruntime = "^1.18.0"
onnx = "^1.16.1"
numpy = "<2"
timm = "^1.0.7"
imgviz = "^1.7.5"
scikit-image = "^0.24.0"
pillow = "^10.3.0"
pyyaml = "^6.0.1"
shapely = "^2.0.4"
PyQt5 = { url = "https://files.pythonhosted.org/packages/ca/ac/596e8ca16fd0634542d874c0d79219fc527ea7de73a5000092f60ecbf6e9/PyQt5-5.15.10-cp37-abi3-win_amd64.whl" }
PyQt5-Qt5 = { url = "https://files.pythonhosted.org/packages/py3/P/PyQt5_Qt5/PyQt5_Qt5-5.15.2-py3-none-win_amd64.whl" }
opencv-python = "^4.10.0.84"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
